--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,34 +5,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech-Deck</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body>
-  <div class="wrapper">
-    <header>
+<body class="container-fluid bg-dark d-flex flex-column min-vh-100">
+    <header class="row bg-info text-dark d-flex justify-content-between">
       <h1>
-        <a href="/">Just Tech News</a>
+        Tech-Deck
       </h1>
-      <nav>
+      <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+          <a class="nav-link text-dark " href="/">Home</a>
+        </li>
         {{#if loggedIn}}
-        <a href="/dashboard">dashboard</a>
-        <button id="logout" class="btn-no-style">logout</button>
+        <li class="nav-item">
+          <a class="nav-link text-dark " href="/dashboard">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <button id="logout" class="btn">Logout</button>
+        </li>
         {{else}}
-        <a href="/login">login</a>
+        <li class="nav-item">
+          <a class="nav-link text-dark" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-dark" href="/signup">Sign Up</a>
+        </li>
         {{/if}}
-      </nav>
+      </ul>
     </header>
-    <main>
+    <main class="row text-light">
       {{{ body }}}
     </main>
-    <footer>
-      Thanks for visiting!
+    <footer class="row bg-info text-center text-dark mt-auto">
+      Thanks for using Tech-Deck!
     </footer>
-  </div>
 {{#if loggedIn}}
 <script src="/javascript/logout.js"></script>
 {{/if}}
+
 </body>
 
 </html>
