--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -7,8 +7,8 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
-    <button type="button" class="upvote-btn">upvote</button>
+    <button class="btn btn-info" type="submit"><i class="fa-solid text-light fa-plus"></i></button>
+    <button type="button" class="btn btn-info upvote-btn"><i class="fa-solid text-light fa-thumbs-up"></i></button>
   </div>
 </form>
 {{/if}}
