--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,16 +1,16 @@
-<section>
+<section class="mt-3 d-flex align-items-center justify-content-around text-center">
   <h2>Create New Post</h2>
 
   <form class="new-post-form">
-    <div>
-      <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" />
+    <div class="input-group mb-3">
+      <label class="input-group-text" for="post-title">Title</label>
+      <input class="form-control" placeholder="Enter Title Here" type="text" id="post-title" name="post-title" />
     </div>
-    <div>
-      <label for="post-url">Link</label>
-      <input id="post-url" name="post-url" />
+    <div class="input-group mb-3">
+      <label class="input-group-text" for="post-url">Link</label>
+      <input class="form-control" placeholder="Enter URL Here" id="post-url" name="post-url" />
     </div>
-    <button type="submit" class="btn ">Create</button>
+    <button type="submit" class="btn btn-info">Create</button>
   </form>
 </section>
 
@@ -21,7 +21,7 @@
     {{#each posts as |post|}}
     <li class="border m-2 rounded-pill border-light text-center">
       {{> post-info post}}
-      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+      <a class="text-info" href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
     </li>
     {{/each}}
   </ol>
