--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,8 +7,8 @@
       <input class="form-control" placeholder="Enter Title Here" type="text" id="post-title" name="post-title" />
     </div>
     <div class="input-group mb-3">
-      <label class="input-group-text" for="post-url">Link</label>
-      <input class="form-control" placeholder="Enter URL Here" id="post-url" name="post-url" />
+      <label class="input-group-text" for="post-url">Post</label>
+      <input class="form-control" placeholder="Enter Post Here" id="post-body" name="post-body" />
     </div>
     <button type="submit" class="btn btn-info">Create</button>
   </form>
