--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,10 +1,9 @@
 <article class="post">
     <div class="title">
     <a class="text-info" href="{{post_url}}" target="_blank">{{title}}</a>
-    <span>({{format_url post_url}})</span>
     </div>
     <div class="meta">
-    {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on
+    {{vote_count}} {{format_plural "like" vote_count}} | created by {{user.username}} on
     {{format_date created_at}}
     |
     <a class="text-info" href="/post/{{id}}">{{comments.length}} comment(s)</a>
