comment delete cascade

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
     </div>
     <div class="input-group mb-3">
       <label class="input-group-text" for="post-url">Post</label>
-      <input class="form-control" placeholder="Enter Post Here" id="post-body" name="post-body" />
+      <textarea class="form-control" placeholder="Enter Post Here" id="post-body" name="post-body"></textarea>
     </div>
     <button type="submit" class="btn btn-info">Create</button>
   </form>
