--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
         {{/if}}
       </ul>
     </header>
-    <main class="row text-light">
+    <main class="row text-center text-light">
       {{{ body }}}
     </main>
     <footer class="row bg-info text-center text-dark mt-auto">
