--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,31 +1,21 @@
-<article>
+<article class="d-flex flex-column align-items-center">
   <a href="/dashboard"> &larr; Back to dashboard</a>
   <h2>
     Edit Post
   </h2>
-  <form class="edit-post-form">
-    <div>
-      <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{format_url post.post_url}})</span>
-    </div>
-    <div>
+  <form class="edit-post-form col-4">
+    <div class="input-group">
+    <input class="form-control" name="post-title" type="text" value="{{post.title}}" />
+    <button type="submit" class="btn btn-info btn-outline-secondary"><i class="fas fa-save"></i></button>
+    <button type="button" class="delete-post-btn btn btn-info btn-outline-secondary"><i class="fa-solid fa-trash"></i></button> 
+    </div>       
+  </form>
+  <div>
       {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
       {{> comments post.comments}}
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
-    <button type="submit">Save post</button>
-    <button type="button" class="delete-post-btn">Delete post</button>
-  </form>
 </article>
-<form class="comment-form">
-  <div>
-    <textarea name="comment-body"></textarea>
-  </div>
-    
-  <div>
-    <button type="submit">add comment</button>
-  </div>
-</form>
 <script src="/javascript/edit-post.js"></script>
 <script src="/javascript/delete-post.js"></script>
 <script src="/javascript/comment.js"></script>
