--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,18 +1,19 @@
-{{> post-info post}}
+<h1 class="text-info mt-5">{{post.title}} By {{post.user.username}}</h1>
+<p>Created on {{format_date post.created_at}}</p>
+
+<div class="fs-3 mb-5 p-3 border-top border-bottom border-info">{{post.post_body}}</div>
 
 {{#if loggedIn}}
 <form class="comment-form">
-  <div>
-    <textarea name="comment-body"></textarea>
-  </div>
-
-  <div>
-    <button class="btn btn-info" type="submit"><i class="fa-solid text-light fa-plus"></i></button>
-    <button type="button" class="btn btn-info upvote-btn"><i class="fa-solid text-light fa-thumbs-up"></i></button>
+  <div class="input-group">
+    <textarea class="form-control" name="comment-body" placeholder="Leave a comment"></textarea>
+    <button class="btn btn-info btn-outline-secondary" type="submit"><i class="fa-solid text-light fa-plus"></i></button>
+    <button type="button" class="btn btn-info btn-outline-secondary upvote-btn"><i class="fa-solid text-light fa-thumbs-up"></i></button>
   </div>
 </form>
 {{/if}}
 
+<h2 class="mt-4 border-bottom text-info">Comments</h2>
 {{> comments post.comments}}
 
 {{#if loggedIn}}
